syntax = "proto3";

package mantrae.v1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";

service DnsProviderService {
  rpc GetDnsProvider(GetDnsProviderRequest) returns (GetDnsProviderResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }
  rpc CreateDnsProvider(CreateDnsProviderRequest) returns (CreateDnsProviderResponse);
  rpc UpdateDnsProvider(UpdateDnsProviderRequest) returns (UpdateDnsProviderResponse);
  rpc DeleteDnsProvider(DeleteDnsProviderRequest) returns (DeleteDnsProviderResponse);
  rpc ListDnsProviders(ListDnsProvidersRequest) returns (ListDnsProvidersResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }
}

enum DnsProviderType {
  DNS_PROVIDER_TYPE_UNSPECIFIED = 0;
  DNS_PROVIDER_TYPE_CLOUDFLARE = 1;
  DNS_PROVIDER_TYPE_POWERDNS = 2;
  DNS_PROVIDER_TYPE_TECHNITIUM = 3;
}

message DnsProvider {
  string id = 1;
  string name = 2;
  DnsProviderType type = 3;
  DnsProviderConfig config = 4;
  bool is_default = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message DnsProviderConfig {
  string api_key = 8;
  string api_url = 9;
  string ip = 10;
  bool proxied = 11;
  bool auto_update = 12;
  string zone_type = 13;
}

message GetDnsProviderRequest {
  string id = 1 [(buf.validate.field).string.min_len = 1];
}
message GetDnsProviderResponse {
  DnsProvider dns_provider = 1;
}

message CreateDnsProviderRequest {
  string name = 1 [(buf.validate.field).string.min_len = 1];
  DnsProviderType type = 2 [(buf.validate.field).enum.defined_only = true];
  DnsProviderConfig config = 3;
  bool is_default = 4;
}
message CreateDnsProviderResponse {
  DnsProvider dns_provider = 1;
}

message UpdateDnsProviderRequest {
  string id = 1 [(buf.validate.field).string.min_len = 1];
  string name = 2 [(buf.validate.field).string.min_len = 1];
  DnsProviderType type = 3 [(buf.validate.field).enum.defined_only = true];
  DnsProviderConfig config = 4;
  bool is_default = 5;
}
message UpdateDnsProviderResponse {
  DnsProvider dns_provider = 1;
}

message DeleteDnsProviderRequest {
  string id = 1 [(buf.validate.field).string.min_len = 1];
}
message DeleteDnsProviderResponse {}

message ListDnsProvidersRequest {
  optional int64 limit = 1 [(buf.validate.field).cel = {
    id: "limit.valid"
    message: "limit must be either -1 or greater than 0"
    expression: "this == -1 || this > 0"
  }];
  optional int64 offset = 2 [(buf.validate.field).int64.gte = 0];
}
message ListDnsProvidersResponse {
  repeated DnsProvider dns_providers = 1;
  int64 total_count = 2;
}
